# llm-assisted-transformation

./: LICENSE  README.md
prompt-templates/: feedback_prompt_cmake.txt  feedback_prompt_platform_build.txt  feedback_prompt_platform_test.txt  prompt_cmake.txt  prompt_platform.txt
spled_cloned-variants/: README.md
spled_cloned-variants/spled-blinking_light/: CMakeLists.txt  README.md
spled_cloned-variants/spled-blinking_light/src/: blinking_light.c  blinking_light.h  console_interface.c  light_controller.c  light_controller.h  main.c  main_control_knob.c  power_signal_processing.h
spled_cloned-variants/spled-blinking_light/test/: test_spled.cc
spled_cloned-variants/spled-color_light/: CMakeLists.txt
spled_cloned-variants/spled-color_light/src/: console_interface.h  light.c  light_controller.c  rte.c
spled_cloned-variants/spled-color_light/test/: test_keyboard_interface.cc  test_power_signal_processing.cc
spled_cloned-variants/spled-color_light_green/: .gitignore  CMakeLists.txt  README.md
spled_cloned-variants/spled-color_light_green/src/: keyboard_interface.c  light.h  light_controller.c  main.c  power_signal_processing.c  rte.h
spled_cloned-variants/spled-color_light_green/test/: test_light_controller.cc
spled_cloned-variants/spled-dimmable_light/: CMakeLists.txt  README.md
spled_cloned-variants/spled-dimmable_light/src/: brightness_controller.c  brightness_controller.h  dimmable_light.c  dimmable_light.h  keyboard_interface.h  light_controller.c  main.c  main_control_knob.h
(+1 files in other folders)
